--- a/style.css
+++ b/style.css
@@ -27,4 +27,18 @@
     stroke: #777;
     stroke-linejoin: "round";
 }
-
+.q01 {
+    fill:blue;
+}
+.q02 {
+    fill:black;
+}
+.q0 { fill:rgb(247,251,255); }
+.q1 { fill:rgb(222,235,247); }
+.q2 { fill:rgb(198,219,239); }
+.q3 { fill:rgb(158,202,225); }
+.q4 { fill:rgb(107,174,214); }
+.q5 { fill:rgb(66,146,198); }
+.q6 { fill:rgb(33,113,181); }
+.q7 { fill:rgb(8,81,156); }
+.q8 { fill:rgb(8,48,107); }
